--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
     <title>Interface</title>
 </head>
 <body>
 <section>
     <div>
-        <h3 id="text">Loading..</h3>
+        <h3 style="color: white!important;" id="text">Loading..</h3>
     </div>
 </section>
-<button id="next-btn" class='pulse-button'></button>
-<script src="./assets/js/index.js" type="module" ></script>
+<a id="next-btn" class='pulse-button' href="playback.html"></a>
+<script src="../../assets/js/index.js" type="module" ></script>
 </body>
 
 </html>
