Updated for test

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
         <h3 style="color: white!important;" id="text">Loading..</h3>
     </div>
 </section>
-<a id="next-btn" class='pulse-button' href="playback.html"></a>
+<a id="next-btn" class='pulse-button' href="client.html"></a>
 <script src="../../assets/js/index.js" type="module" ></script>
 </body>
 
