--- a/app/views/client.html
+++ b/app/views/client.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Stream interface</title>
+    <script src="https://static.robotwebtools.org/threejs/current/three.js"></script>
+    <script src="https://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
+    <script src="https://static.robotwebtools.org/roslibjs/current/roslib.js"></script>
+    <script src="https://static.robotwebtools.org/ros3djs/current/ros3d.js"></script>
 </head>
 <body>
 <h1 style="color: white">loading stream</h1>
-<a id="next-btn" class='pulse-button' href="index.html"></a>
-<link rel="stylesheet" href="../../assets/css/style.css">
+<div id="viewer"></div>
+<!--<a id="next-btn" class='pulse-button' href="index.html"></a>-->
+<!--<link rel="stylesheet" href="../../assets/css/style.css">-->
 <script src="../../assets/js/client.js" type="module" async defer></script>
 </body>
 </html>
