Added lidar visualization and overlay

--- a/app/views/client.html
+++ b/app/views/client.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Stream interface</title>
     <script src="https://static.robotwebtools.org/threejs/current/three.js"></script>
     <script src="https://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
     <script src="https://static.robotwebtools.org/roslibjs/current/roslib.js"></script>
     <script src="https://static.robotwebtools.org/ros3djs/current/ros3d.js"></script>
+    <link rel="stylesheet" href="../../assets/css/stream.css">
 </head>
 <body>
-<h1 style="color: white">loading stream</h1>
 <div id="viewer"></div>
-<!--<a id="next-btn" class='pulse-button' href="index.html"></a>-->
+<a id="next-btn" class='pulse-button' href="index.html"></a>
 <!--<link rel="stylesheet" href="../../assets/css/style.css">-->
 <script src="../../assets/js/client.js" type="module" async defer></script>
 </body>
