Changed script name

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,7 +15,7 @@
     </div>
 </section>
 <a id="next-btn" class='pulse-button' href="client.html"></a>
-<script src="../../assets/js/index.js" type="module" ></script>
+<script src="../../assets/js/loadScreen.js" type="module" ></script>
 </body>
 
 </html>
