--- a/assets/css/stream.css
+++ b/assets/css/stream.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0;
+}
 #viewer{
     width: 100vw; height: 100vh;
 }
@@ -12,12 +15,14 @@
 
 /*Pulse Button*/
 .pulse-button {
-    position: fixed;
+    position: absolute;
     border: none;
     text-decoration: none;
     z-index: 3;
-    margin-left: -50px;
-    margin-top: -50px;
+    left: 0;
+    border-bottom: 0;
+    /*margin-left: -50px;*/
+    /*margin-top: -50px;*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,9 +30,6 @@
     height: 100px;
     font-size: 1.3em;
     text-align: center;
-    /*font-family: 'Trebuchet MS', sans-serif;*/
-    /*text-transform: uppercase;*/
-    /*text-align: center;*/
     line-height: 100px;
     letter-spacing: -1px;
     color: white;
