Updated stable build

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
 <section>
-    <div>
-        <h3 style="color: white!important;" id="text">Loading..</h3>
+    <div style="text-align: center">
+        <h1 style="letter-spacing: normal">Realtime interface</h1>
+        <h3 style="letter-spacing:1px;color: white!important;" id="text">Ga door naar de checklist </h3>
     </div>
 </section>
-<a id="next-btn" class='pulse-button' href="client.html"></a>
+<a id="next-btn" class='pulse-button' href="checklist.html"></a>
 <script src="../../assets/js/loadScreen.js" type="module" ></script>
 </body>
 
