--- a/assets/css/stream.css
+++ b/assets/css/stream.css
@@ -1,5 +1,30 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+body {
     margin: 0;
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    width: 100vh;
+}
+#error-screen
+{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    color: #fff;
+    position: absolute;
+    background-color: #141414;
+
+}
+.error-wrapper
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 #viewer{
     width: 100vw; height: 100vh;
@@ -12,10 +37,20 @@ body{
 #lidar {
     z-index: 2;
 }
-
+.error-title
+{
+    margin: 0;
+    font-size: 5rem;
+}
+.error-message
+{
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 300;
+}
 /*Pulse Button*/
 .pulse-button {
-    position: absolute;
+    /* position: absolute; */
     border: none;
     text-decoration: none;
     z-index: 3;
@@ -63,4 +98,66 @@ body{
         transform: scale(0.9);
         box-shadow: 0 0 0 0 rgba(90, 153, 212, 0);
     }
+}
+
+/*styles for interface footer */
+.interface-footer {
+    position: absolute;
+    align-items: center;
+    bottom: 0;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100vw;
+    height: 20vw;
+    z-index: 99;
+}
+
+/* state widget */
+.state-wrapper {
+    background-color: rgba(20, 20, 20, 0.77);
+}
+
+.footer-col {
+    height: 125px;
+    width: 25%;
+    border-radius: 10px;
+    color: #fff;
+    margin: 0px 20px;
+}
+
+.state-inner-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+
+.state-icon-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    width: 35%;
+    border-radius: 10px;
+    background-color: rgba(20, 20, 20, 1);
+}
+
+.state-info-wrapper {
+    height: 100%;
+    padding: 0px 10%;
+    width: 65%;
+}
+
+.state-title {
+    font-weight: bold;
+}
+
+.state-text {
+    font-weight: normal;
+}
+
+#footer {
+    display: none;
 }
