Updated stable build

--- a/app/views/client.html
+++ b/app/views/client.html
@@ -61,7 +61,218 @@
 
 
 </div>
+<aside class="top-bar">
+    <div class="footer-col ">
+        <h1>batterij</h1>
+    </div>
+    <div class="footer-col">
+
+
+    </div>
+    <div class="footer-col ">
+
+    </div>
+</aside>
+<aside class="interface-footer">
+    <div class="footer-col ">
+        <button class="pulse-button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                 class="bi bi-reply-all-fill" viewBox="0 0 16 16">
+                <path d="M8.021 11.9 3.453 8.62a.719.719 0 0 1 0-1.238L8.021 4.1a.716.716 0 0 1 1.079.619V6c1.5 0 6 0 7 8-2.5-4.5-7-4-7-4v1.281c0 .56-.606.898-1.079.62z"/>
+                <path d="M5.232 4.293a.5.5 0 0 1-.106.7L1.114 7.945a.5.5 0 0 1-.042.028.147.147 0 0 0 0 .252.503.503 0 0 1 .042.028l4.012 2.954a.5.5 0 1 1-.593.805L.539 9.073a1.147 1.147 0 0 1 0-1.946l3.994-2.94a.5.5 0 0 1 .699.106z"/>
+            </svg>
+        </button>
+    </div>
+    <div class="footer-col state-wrapper">
+        <div class="state-inner-container">
+            <div class="state-icon-wrapper">
+                <div>
+                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+                         width="50%" height="50%" viewBox="0 0 512.000000 512.000000"
+                         preserveAspectRatio="xMidYMid meet">
+
+                        <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)"
+                           fill="#fff" stroke="none">
+                            <path d="M532 4469 c-42 -13 -111 -81 -119 -119 l-5 -30 -124 0 -124 0 0 -80
+0 -80 120 0 120 0 0 -84 0 -85 -53 -24 c-66 -30 -118 -81 -154 -150 -23 -45
+ -27 -64 -27 -137 0 -69 4 -94 24 -135 31 -63 91 -124 155 -155 49 -24 56 -25
+317 -28 l266 -3 -144 -432 -144 -432 0 -824 c0 -617 3 -834 12 -865 16 -55 99
+ -138 154 -154 96 -28 182 -4 247 68 24 26 49 66 55 88 9 29 12 252 12 848 l0
+809 105 315 c57 172 104 314 102 315 -18 8 -117 45 -134 50 -20 5 -27 -12
+ -125 -302 l-103 -308 -5 -841 c-5 -810 -6 -843 -24 -863 -26 -29 -86 -29 -112
+0 -18 20 -19 51 -22 822 l-2 801 151 454 151 454 62 -7 c71 -9 91 -15 145 -49
+35 -22 51 -48 136 -217 102 -203 149 -266 229 -313 49 -28 137 -56 180 -56 27
+0 52 -20 169 -138 l137 -137 0 -103 0 -102 -56 0 c-31 0 -75 -5 -98 -12 -55
+ -16 -138 -99 -154 -154 -17 -58 -17 -730 0 -788 16 -55 99 -138 154 -154 30
+ -9 181 -12 556 -12 590 0 578 -2 651 80 40 44 67 103 67 144 0 13 11 16 58 16
+87 0 144 23 195 80 56 62 67 102 67 240 0 138 -11 178 -67 240 -51 57 -108 80
+ -195 80 -47 0 -58 3 -58 16 0 41 -27 100 -67 144 -51 57 -108 80 -195 80 l-58
+0 0 103 0 102 138 138 c116 116 142 137 168 137 43 0 131 28 180 56 80 47 127
+110 229 313 85 169 101 195 136 217 54 34 74 40 145 49 l62 7 151 -454 151
+ -454 -2 -801 c-3 -771 -4 -802 -22 -822 -26 -29 -86 -29 -112 0 -18 20 -19 53
+ -24 858 l-5 836 -104 310 c-57 171 -105 311 -106 313 -2 2 -143 -47 -152 -53
+ -2 -1 45 -143 102 -315 l105 -315 0 -809 c0 -606 3 -819 12 -850 16 -55 99
+ -138 154 -154 96 -28 182 -4 247 68 24 26 49 66 55 88 9 29 12 256 12 863 l0
+824 -144 433 -144 432 248 0 c201 0 257 3 298 16 76 25 140 79 181 154 32 59
+36 72 36 145 0 66 -5 90 -26 136 -33 70 -87 125 -156 156 l-53 24 0 85 0 84
+120 0 120 0 0 80 0 80 -124 0 -124 0 -5 30 c-9 42 -77 107 -129 121 -54 14
+ -120 5 -165 -22 -38 -23 -83 -84 -83 -111 0 -16 -12 -18 -125 -18 l-125 0 0
+ -80 0 -80 120 0 120 0 0 -80 0 -80 -97 0 c-206 0 -303 44 -485 217 -167 159
+ -261 214 -420 247 -42 9 -104 16 -138 16 l-60 0 0 -80 0 -80 53 0 c78 0 175
+ -24 252 -62 52 -25 100 -62 197 -155 248 -236 327 -263 775 -263 306 0 321 -3
+370 -66 53 -70 37 -167 -35 -222 l-35 -27 -416 -5 c-406 -5 -417 -6 -474 -28
+ -35 -15 -81 -45 -117 -79 -54 -49 -70 -76 -155 -244 -62 -122 -108 -200 -131
+ -223 -70 -68 -48 -66 -844 -66 -796 0 -774 -2 -844 66 -23 23 -69 101 -131
+223 -85 168 -101 195 -155 244 -36 34 -82 64 -117 79 -57 22 -68 23 -474 28
+l-416 5 -35 27 c-72 55 -88 152 -35 222 49 63 64 66 370 66 448 0 527 27 775
+263 97 93 145 130 197 155 121 60 144 62 733 62 l532 0 0 80 0 80 -540 0
+c-587 0 -626 -3 -755 -57 -93 -39 -160 -88 -290 -213 -173 -165 -274 -210
+ -477 -210 l-98 0 0 80 0 80 120 0 120 0 0 80 0 80 -124 0 -123 0 -6 30 c-4 16
+ -24 47 -46 69 -56 56 -128 73 -209 50z m98 -178 c5 -11 10 -81 10 -155 l0
+ -136 -40 0 -40 0 0 136 c0 141 8 174 40 174 11 0 24 -9 30 -19z m3920 0 c5
+ -11 10 -81 10 -155 l0 -136 -40 0 -40 0 0 136 c0 141 8 174 40 174 11 0 24 -9
+30 -19z m-1635 -1651 l-80 -80 -275 0 -275 0 -80 80 -80 80 435 0 435 0 -80
+ -80z m-115 -320 l0 -80 -240 0 -240 0 0 80 0 80 240 0 240 0 0 -80z m292 -268
+l23 -23 0 -349 0 -349 -23 -23 -23 -23 -509 0 -509 0 -23 23 -23 23 0 348 c0
+326 1 350 19 369 10 12 28 23 40 25 11 3 243 4 513 3 l492 -1 23 -23z m326
+ -236 c14 -14 17 -37 17 -136 0 -144 -5 -152 -95 -158 l-60 -4 0 162 0 162 60
+ -4 c39 -3 67 -10 78 -22z"/>
+                            <path d="M2447 1985 c-89 -34 -172 -122 -197 -209 -18 -66 -9 -181 18 -238 30
+ -60 90 -120 150 -150 68 -33 216 -33 284 0 60 30 120 90 150 150 33 68 33 216
+0 284 -30 60 -90 120 -150 150 -59 29 -195 36 -255 13z m198 -173 c33 -19 75
+ -92 75 -132 0 -49 -42 -113 -90 -137 -54 -28 -82 -28 -137 -3 -117 53 -118
+219 -3 278 51 26 102 24 155 -6z"/>
+                            <path d="M2025 3655 c-25 -24 -25 -26 -25 -215 0 -189 0 -191 25 -215 l24 -25
+511 0 511 0 24 25 c25 24 25 26 25 215 0 189 0 191 -25 215 l-24 25 -511 0
+ -511 0 -24 -25z m935 -215 l0 -80 -400 0 -400 0 0 80 0 80 400 0 400 0 0 -80z"/>
+                        </g>
+                    </svg>
+                </div>
+            </div>
+            <div class="state-inner-wrapper">
+                <div id="initial-state" class="state">
+                    <div class="state-info-wrapper">
+                        <div class="clock">
+                            <h5 id="clock"></h5>
+                        </div>
+                        <div class="state-text-wrapper">
+
+                            <div>
+                                <h1 class="state-title">Ready</h1>
+                            </div>
+                            <div class="state-text">
+                                <p>Drone is ready for takeoff.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="state" class="state">
+                    <div class="state-info-wrapper">
+                        <div class="clock">
+                            <h5 id="">10:10</h5>
+                        </div>
+                        <div class="state-text-wrapper">
+
+                            <div>
+                                <h1 class="state-title">Ready</h1>
+                            </div>
+                            <div class="state-text">
+                                <p>Drone is ready for takeoff.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="state-2" class="state">
+                    <div class="state-info-wrapper">
+                        <div class="clock">
+                            <h5 id="">10:10</h5>
+                        </div>
+                        <div class="state-text-wrapper">
+
+                            <div>
+                                <h1 class="state-title">Ready</h1>
+                            </div>
+                            <div class="state-text">
+                                <p>Drone is ready for takeoff.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="state-3" class="state">
+                    <div class="state-info-wrapper">
+                        <div class="clock">
+                            <h5 id="">10:10</h5>
+                        </div>
+                        <div class="state-text-wrapper">
+
+                            <div>
+                                <h1 class="state-title">Ready</h1>
+                            </div>
+                            <div class="state-text">
+                                <p>Drone is ready for takeoff.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="footer-col ">
+        <button id="lidar-switch" class="pulse-button">
+            <div class="lidar-show-icon-wrapper">
+                <svg id="show-lidar-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                     class="bi bi-eye-fill" viewBox="0 0 16 16">
+                    <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
+                    <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
+                </svg>
+                <svg id="hide-lidar-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="red"
+                     class="bi bi-eye-slash-fill" viewBox="0 0 16 16">
+                    <path d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z"/>
+                    <path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12-.708.708z"/>
+                </svg>
+            </div>
+        </button>
+    </div>
+</aside>
 <div id="viewer"></div>
+
 <script src="../../assets/js/client.js" type="module" async defer></script>
+<script type="module">
+    const lidarSwitch = document.getElementById('lidar-switch')
+    const hideLidarIcon = document.getElementById('hide-lidar-icon')
+    const showLidarIcon = document.getElementById('show-lidar-icon')
+    const switchLidarView = (e) => {
+        if (hideLidarIcon.style.display === 'none') {
+            showLidarIcon.style.fill = 'red'
+            setTimeout(() => {
+                showLidarIcon.style.display = 'none'
+                hideLidarIcon.style.display = 'flex'
+            }, 1000)
+            showLidarIcon.style.fill = 'white'
+
+
+        } else {
+            hideLidarIcon.style.fill = 'white'
+            setTimeout(() => {
+                showLidarIcon.style.display = 'flex'
+                hideLidarIcon.style.display = 'none'
+            }, 1000)
+            hideLidarIcon.style.fill = 'red'
+        }
+
+    }
+    const updateTime = () => {
+        let clock = document.getElementById('clock')
+        let hours = new Date().getHours()
+        const currentMinutes = new Date().getMinutes()
+        let minutes = currentMinutes < 10 ? '0' + currentMinutes : currentMinutes
+        clock.innerHTML = `${hours}:${minutes}`
+    }
+    lidarSwitch.addEventListener('click', switchLidarView)
+    setInterval(updateTime, 1000)
+
+
+</script>
 </body>
 </html>
