--- a/assets/css/stream.css
+++ b/assets/css/stream.css
@@ -9,7 +9,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: 10px;
-    background-image: url("https://images.unsplash.com/photo-1541944766239-695501c0c318?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
+    /*background-image: url("https://images.unsplash.com/photo-1541944766239-695501c0c318?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");*/
 }
 
 #error-screen {
